--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -16,6 +15,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -23,6 +23,7 @@ var/
 # Virtual Environment
 venv/
 ENV/
+env/
 
 # IDE
 .idea/
@@ -30,16 +31,31 @@ ENV/
 *.swp
 *.swo
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
 # OS
 .DS_Store
 Thumbs.db
 
-# Environment variables
-.env
-
-# Logs
-*.log
+# Application specific
+instance/
+*.pyc
+.coverage
+htmlcov/
+.pytest_cache/
+.mypy_cache/
 
 # Local development
-instance/
 .webassets-cache 
