--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 Flask==3.0.2
 Werkzeug==3.0.1
-scikit-learn==1.4.0
+scikit-learn==1.6.1
 statsmodels==0.14.1
 xgboost==2.0.3
 lifelines==0.27.8
-python-dotenv==1.0.1
+flask-login==0.6.3
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.1
+email-validator==2.1.0.post1
 numpy==1.26.4
-pandas==2.2.1 
+pandas==2.2.1
+python-dotenv==1.0.1
+gunicorn==21.2.0 
