--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ FLASK_DEBUG=1
 SECRET_KEY=your-secret-key-here
 
 # Database Configuration
-DATABASE_URL=sqlite:///users.db
+DATABASE_URL=sqlite:///instance/users.db
 
 # Application Settings
 APP_PORT=8084
@@ -15,4 +15,14 @@ APP_HOST=127.0.0.1
 SESSION_COOKIE_SECURE=True
 REMEMBER_COOKIE_SECURE=True
 SESSION_COOKIE_HTTPONLY=True
-REMEMBER_COOKIE_HTTPONLY=True 
+REMEMBER_COOKIE_HTTPONLY=True
+
+# Email configuration
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USERNAME=your_email@gmail.com
+MAIL_PASSWORD=your_app_password
+MAIL_DEFAULT_SENDER=noreply@statisticalmodelsuggester.com
+
+# Note: For Gmail, create an "App password" in your Google account security settings 
