--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ email-validator==2.1.0.post1
 numpy==1.26.4
 pandas==2.2.1
 python-dotenv==1.0.1
-gunicorn==21.2.0 
+gunicorn==21.2.0
+python-docx
+reportlab 
