--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ env/
 .env
 .env.local
 .env.*.local
+.env.backup
 
 # Database
 *.db
@@ -58,4 +59,8 @@ htmlcov/
 .mypy_cache/
 
 # Local development
-.webassets-cache 
+.webassets-cache
+
+# Temporary files
+temp.json
+*.backup 
