--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ["3.9", "3.11"]
 
     services:
       postgres:
@@ -47,6 +47,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest-cov bandit safety
 
     - name: Set up environment variables
       run: |
@@ -98,11 +99,11 @@ jobs:
 
     - name: Run security checks with bandit
       run: |
-        bandit -r . -f json -o bandit-report.json || true
+        bandit -r . -x tests/,venv/,.venv/ --format json --output bandit-report.json --exit-zero
 
     - name: Run safety check for known vulnerabilities
       run: |
-        safety check --json --output safety-report.json || true
+        safety check --json --output safety-report.json --exit-zero || echo "Safety check completed"
 
     - name: Upload security reports
       uses: actions/upload-artifact@v3
