--- a/requirements.txt
+++ b/requirements.txt
@@ -83,3 +83,13 @@ iniconfig==2.1.0
 pluggy==1.6.0
 Mako==1.3.10
 Pygments==2.19.2
+
+# Testing dependencies
+pytest==8.4.1
+pytest-flask==1.3.0
+pytest-cov==6.2.1
+
+# Development and CI dependencies
+flake8
+bandit
+safety
