--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Core Flask Framework
-Flask==3.0.2
-Werkzeug==3.0.1
+Flask>=3.0.0,<4.0.0
+Werkzeug>=3.0.0,<4.0.0
 
 # Flask Extensions
-flask-login==0.6.3
-flask-sqlalchemy==3.1.1
-flask-wtf==1.2.1
-flask-mail==0.9.1
-flask-migrate==4.1.0
+flask-login>=0.6.0,<1.0.0
+flask-sqlalchemy>=3.1.0,<4.0.0
+flask-wtf>=1.2.0,<2.0.0
+flask-mail>=0.9.0,<1.0.0
+flask-migrate>=4.1.0,<5.0.0
 
 # Database
-psycopg2-binary==2.9.10
-SQLAlchemy==2.0.41
-alembic==1.16.2
+psycopg2-binary>=2.9.0,<3.0.0
+SQLAlchemy>=2.0.0,<3.0.0
+alembic>=1.16.0,<2.0.0
 
 # Data Science and Machine Learning
 scikit-learn>=1.5.0,<1.7.0
@@ -29,12 +29,12 @@ seaborn>=0.13.0,<1.0.0
 plotly>=5.18.0,<6.0.0
 
 # Image Processing
-pillow==11.2.1
+pillow>=11.0.0,<12.0.0
 
 # Document Generation
-python-docx==1.2.0
-reportlab==4.4.2
-lxml==5.4.0
+python-docx>=1.2.0,<2.0.0
+reportlab>=4.4.0,<5.0.0
+lxml>=5.4.0,<6.0.0
 
 # AI and ML Models
 transformers>=4.39.0,<5.0.0
@@ -42,52 +42,47 @@ torch>=2.1.0,<3.0.0
 openai>=1.10.0,<2.0.0
 
 # Utilities
-python-dotenv==1.0.1
-requests==2.32.4
-itsdangerous==2.2.0
-email-validator==2.1.0.post1
-click==8.2.1
-blinker==1.9.0
-dnspython==2.7.0
+python-dotenv>=1.0.0,<2.0.0
+requests>=2.32.0,<3.0.0
+itsdangerous>=2.2.0,<3.0.0
+email-validator>=2.1.0,<3.0.0
+click>=8.2.1,<9.0.0
+blinker>=1.9.0,<2.0.0
+dnspython>=2.7.0,<3.0.0
 
 # Web Server
-gunicorn==21.2.0
+gunicorn>=21.2.0,<22.0.0
 
 # Template Engine
-Jinja2==3.1.6
-MarkupSafe==3.0.2
+Jinja2>=3.1.0,<4.0.0
+MarkupSafe>=3.0.0,<4.0.0
 
 # Forms
-WTForms==3.2.1
+WTForms>=3.2.0,<4.0.0
 
 # Development and Testing
-pytest==8.4.1
-pytest-flask==1.3.0
-pytest-cov==6.2.1
-coverage==7.9.1
+pytest>=8.4.0,<9.0.0
+pytest-flask>=1.3.0,<2.0.0
+pytest-cov>=6.2.0,<7.0.0
+coverage>=7.9.0,<8.0.0
 
 # Build and Packaging
-packaging==25.0
+packaging>=25.0,<26.0.0
 setuptools>=65.0
 wheel
 
 # Compatibility
-typing_extensions==4.14.0
+typing_extensions>=4.14.0,<5.0.0
 
 # Additional utilities
-certifi==2025.6.15
-charset-normalizer==3.4.2
-idna==3.10
-urllib3==2.5.0
-iniconfig==2.1.0
-pluggy==1.6.0
-Mako==1.3.10
-Pygments==2.19.2
-
-# Testing dependencies
-pytest==8.4.1
-pytest-flask==1.3.0
-pytest-cov==6.2.1
+certifi>=2025.6.0,<2026.0.0
+charset-normalizer>=3.4.0,<4.0.0
+idna>=3.10,<4.0.0
+urllib3>=2.5.0,<3.0.0
+iniconfig>=2.1.0,<3.0.0
+pluggy>=1.6.0,<2.0.0
+Mako>=1.3.0,<2.0.0
+Pygments>=2.19.0,<3.0.0
 
 # Development and CI dependencies
 flake8
