--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Core Flask Framework
-Flask>=3.0.0,<4.0.0
-Werkzeug>=3.0.0,<4.0.0
+Flask>=3.0.0
+Werkzeug>=3.0.0
 
 # Flask Extensions
-flask-login>=0.6.0,<1.0.0
-flask-sqlalchemy>=3.1.0,<4.0.0
-flask-wtf>=1.2.0,<2.0.0
-flask-mail>=0.9.0,<1.0.0
-flask-migrate>=4.1.0,<5.0.0
+flask-login>=0.6.0
+flask-sqlalchemy>=3.1.0
+flask-wtf>=1.2.0
+flask-mail>=0.9.0
+flask-migrate>=4.0.0
 
 # Database
 psycopg2-binary>=2.9.0,<3.0.0
@@ -42,12 +42,12 @@ torch>=2.1.0,<3.0.0
 openai>=1.10.0,<2.0.0
 
 # Utilities
-python-dotenv>=1.0.0,<2.0.0
-requests>=2.32.0,<3.0.0
-itsdangerous>=2.2.0,<3.0.0
-email-validator>=2.1.0,<3.0.0
-click>=8.2.1,<9.0.0
-blinker>=1.9.0,<2.0.0
+python-dotenv>=1.0.0
+requests>=2.30.0
+itsdangerous>=2.0.0
+email-validator>=2.0.0
+click>=8.0.0
+blinker>=1.7.0
 dnspython>=2.7.0,<3.0.0
 
 # Web Server
