Clean up documentation: Remove redundant requirement files and DEPENDENCIES.md
- Removed requirements-core.txt, requirements-full.txt, requirements-ml.txt
- Removed DEPENDENCIES.md (consolidated into README)
- Simplified to just requirements.txt and requirements-dev.txt
- All documentation now in single README.md file

--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
         fromDatabase:
           name: statistical-model-suggester-db
           property: connectionString
+      - key: INSTALL_ML_DEPS
+        value: "false"  # Set to "true" to enable heavy ML dependencies
       - key: ADMIN_USERNAME
         sync: false
       - key: ADMIN_EMAIL
