--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,70 +1,26 @@
 # Development and Testing Dependencies
-# These are lighter weight packages for CI/CD
+# Install with: pip install -r requirements.txt -r requirements-dev.txt
 
-# Core Flask Framework
-Flask>=3.0.0
-Werkzeug>=3.0.0
+# Include all production dependencies
+-r requirements.txt
 
-# Flask Extensions
-flask-login>=0.6.0
-flask-sqlalchemy>=3.1.0
-flask-wtf>=1.2.0
-flask-mail>=0.9.0
-flask-migrate>=4.0.0
-
-# Database
-psycopg2-binary>=2.9.0,<3.0.0
-SQLAlchemy>=2.0.0,<3.0.0
-alembic>=1.16.0,<2.0.0
-
-# Basic Data Science (lighter versions)
-scikit-learn>=1.5.0,<1.7.0
-numpy>=1.26.0,<2.0.0
-pandas>=2.2.0,<3.0.0
-scipy>=1.10.0,<2.0.0
-
-# Basic Plotting
-matplotlib>=3.8.0,<4.0.0
-
-# Document Generation
-python-docx>=1.2.0,<2.0.0
-reportlab>=4.4.0,<5.0.0
-lxml>=5.4.0,<6.0.0
-
-# Utilities
-python-dotenv>=1.0.0
-requests>=2.30.0
-itsdangerous>=2.0.0
-email-validator>=2.0.0
-click>=8.0.0
-blinker>=1.7.0
-dnspython>=2.7.0,<3.0.0
-
-# Web Server
-gunicorn>=21.2.0,<22.0.0
-
-# Template Engine
-Jinja2>=3.1.0,<4.0.0
-MarkupSafe>=3.0.0,<4.0.0
-
-# Forms
-WTForms>=3.2.0,<4.0.0
-
-# Development and Testing
+# Testing frameworks
 pytest>=8.4.0,<9.0.0
 pytest-flask>=1.3.0,<2.0.0
 pytest-cov>=6.2.0,<7.0.0
 coverage>=7.9.0,<8.0.0
+
+# Code quality tools
 flake8
 bandit
 safety
 
-# Build and Packaging
+# Build and packaging tools
 packaging>=25.0,<26.0.0
 setuptools>=65.0
 wheel
 
-# Additional utilities
+# Additional utilities for development
 certifi>=2025.6.0,<2026.0.0
 charset-normalizer>=3.4.0,<4.0.0
 idna>=3.10,<4.0.0
@@ -73,3 +29,4 @@ iniconfig>=2.1.0,<3.0.0
 pluggy>=1.6.0,<2.0.0
 Mako>=1.3.0,<2.0.0
 Pygments>=2.19.0,<3.0.0
+typing_extensions>=4.14.0,<5.0.0
