--- a/render.yaml
+++ b/render.yaml
@@ -11,14 +11,11 @@ services:
         generateValue: true
       - key: FLASK_ENV
         value: production
-      - key: FLASK_DEBUG
-        value: 0
+      - key: FLASK_DEBUG        value: 0
       - key: DATABASE_URL
         fromDatabase:
           name: statistical-model-suggester-db
           property: connectionString
-      - key: INSTALL_ML_DEPS
-        value: "false"  # Set to "true" to enable heavy ML dependencies
       - key: ADMIN_USERNAME
         sync: false
       - key: ADMIN_EMAIL
